--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.8",
     "@mui/styled-engine-sc": "^5.10.6",
+    "@reduxjs/toolkit": "^1.8.6",
     "crypto-js": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "loading-progress-bar": "^2.0.4",
@@ -21,6 +22,7 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.4",
     "react-toastify": "^9.0.8",
     "styled-components": "^5.3.6"
   },
