--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "loading-progress-bar": "^2.0.4",
     "mongoose": "^6.5.2",
+    "netlify-cli": "^12.0.11",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
